[ADD] product page css

--- a/src/tutorials/03_css/product_page.html
+++ b/src/tutorials/03_css/product_page.html
@@ -6,23 +6,23 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/product.css">
     </head>
     <body>
-        <article>
-            <h1>Converse chick Taylor</h1>
+        <article class="product">
+            <h1 class="product-title">Converse chick Taylor</h1>
             <img src="img/challenges.jpg" alt="" width="250px">
-            <p><strong>$65</strong></p>
-            <p>Free shiping</p>
+            <p class="product-price"><strong>$65.00</strong></p>
+            <p class="shiping">Free shiping</p>
             <p>Ready to dress up or down.</p>
-            <a href="#">More information &RightArrowBar;</a>
-            <h2>Product details</h2>
-            <ul>
+            <a href="#" class="more-info">More information &RightArrowBar;</a>
+            <h2 class="product-details">Product details</h2>
+            <ul class="details-list">
                 <li>Lightweight, durable</li>
                 <li>comfort</li>
                 <li>Iconic chuck taylor ankle patch</li>
             </ul>
-            <button>Add to cart</button>
+            <button class="add-cart">Add to cart</button>
        </article>
     </body>
 </html>
