[ADD] float layouts

--- a/src/tutorials/03_css/product_page.html
+++ b/src/tutorials/03_css/product_page.html
@@ -9,20 +9,23 @@
         <link rel="stylesheet" href="css/product.css">
     </head>
     <body>
-        <article class="product">
-            <h1 class="product-title">Converse chick Taylor</h1>
-            <img src="img/challenges.jpg" alt="" width="250px">
-            <p class="product-price"><strong>$65.00</strong></p>
-            <p class="shiping">Free shiping</p>
-            <p>Ready to dress up or down.</p>
-            <a href="#" class="more-info">More information &RightArrowBar;</a>
-            <h2 class="product-details">Product details</h2>
-            <ul class="details-list">
-                <li>Lightweight, durable</li>
-                <li>comfort</li>
-                <li>Iconic chuck taylor ankle patch</li>
-            </ul>
-            <button class="add-cart">Add to cart</button>
-       </article>
+        <div class="container">
+            <article class="product">
+                <h1 class="product-title">Converse chick Taylor</h1>
+                <img src="img/challenges.jpg" alt="" width="250px">
+                <p class="product-price"><strong>$65.00</strong></p>
+                <p class="shiping">Free shiping</p>
+                <p class="sale">sale</p>
+                <p>Ready to dress up or down.</p>
+                <a href="#" class="more-info">More information &RightArrowBar;</a>
+                <h2 class="product-details">Product details</h2>
+                <ul class="details-list">
+                    <li>Lightweight, durable</li>
+                    <li>comfort</li>
+                    <li>Iconic chuck taylor ankle patch</li>
+                </ul>
+                <button class="add-cart">Add to cart</button>
+        </article>
+       </div>
     </body>
 </html>
