--- a/src/tutorials/grid/index.html
+++ b/src/tutorials/grid/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div class="container">
-        <div class="el el--1">HTML</div>
-        <div class="el el--2">AND</div>
-        <div class="el el--3">CSS</div>
-        <div class="el el--4">are</div>
-        <div class="el el--5">amazing</div>
-        <div class="el el--6">languages</div>
-        <div class="el el--7">to</div>
-        <div class="el el--8">learn</div>
+        <div class="el el--1">1 HTML</div>
+        <div class="el el--2">2 AND</div>
+        <div class="el el--3">3 CSS</div>
+        <div class="el el--4">4 are</div>
+        <div class="el el--5">5 amazing</div>
+        <div class="el el--6">6 languages</div>
+        <div class="el el--7">7 to</div>
+        <div class="el el--8">8 learn</div>
     </div>
 </body>
 </html>
