--- a/src/tutorials/05-Design/index.html
+++ b/src/tutorials/05-Design/index.html
@@ -28,7 +28,7 @@
       </header>
 
       <section>
-        <h2>What makes our chairs special</h2>
+        <h2>What makes our chairs special CSS</h2>
         <div class="grid-3-cols">
           <div>
             <p class="features-title"><strong>Science meets design</strong></p>
