--- a/src/tutorials/05-Design/index.html
+++ b/src/tutorials/05-Design/index.html
@@ -40,7 +40,7 @@
 
           <div>
             <p class="features-title">
-              <strong>Maximal comfort</strong>
+              <strong>Maximal comfort 123123</strong>
             </p>
             <p class="features-text">
               Reprehenderit optio placeat quasi excepturi architecto, explicabo
